# academic-code-portfolio

./: .editorconfig  .gitignore  .gitmodules  README.md  SheetsAjax.html  homework.html
2016-2021 Miami University/CSE 262 Tech Ethics/: README.md
2016-2021 Miami University/CSE 543 High Performance Computing/08. Homework 2/: CMakeLists.txt  Homework02.bash  box-muller.cpp
2016-2021 Miami University/CSE 543 High Performance Computing/11. Homework 3/: CMakeLists.txt  Homework03.bash
2018-10-24 Lab/: homework-style.css  homework.html
2018-10-31 Lab Homework/: index1.html  script.js  style.css
2018-11-07 Lab Homework/: index.php  style.css
2018-11-28 Lab/: php.ini  rest1128.php
CIS 1111 (Sinclair Community College)/: README.md  desktop.ini
CSE 102/: Palindrome Checker Program.s  README.md
CSE 102 Introduction to Computing and Engineering/: README.md
CSE 174/: Group Project.md
CSE 174 Fundamentals of Programming and Problem Solving/: Group Project.md  README.md
CSE 201 Introduction to Software Engineering/: Final Project.rst
CSE 271 Introduction to Object-Oriented Programming/: README.md
client/: .eslintrc.yml  .gitignore  .html-linter-rc.json  index.html  package.json
database/: DDL.sql
server/: Makefile  README.md  database-credentials.php.example
src/: BinarySearchTree.java  BoardState.java  HashMap.java  IntegerRelationSortedSet.java  LookupInterface.java  SortedLinkedList.java  SortedLinkedSet.java  Stack.java  StudentLookup.java  TicTacToe.java  TicTacToeInteraction.java  WinState.java
test/: LookupJUnitTester.java  TicTacToeTest.java
(+312 files in other folders)
